--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ description: Convert MP3, WAV, and M4A files to M4B format with chapters and met
         Convert MP3, WAV, and M4A files to M4B format with automatic chapter creation and metadata management. All processing happens locally on your Mac. Optimized for Apple Silicon for maximum speed.
     </p>
     <div>
-        <a href="#" class="cta-button">Download on the Mac App Store</a>
+        <a href="https://apps.apple.com/us/app/m4bot-mac-audiobook-binder/id6755912364" class="cta-button" target="_blank" rel="noopener noreferrer">Download on the Mac App Store</a>
     </div>
 </div>
 
@@ -223,18 +223,12 @@ description: Convert MP3, WAV, and M4A files to M4B format with chapters and met
             <h3>Convert Audio Formats</h3>
             <p>Convert MP3 to M4B, WAV to M4B, and M4A to M4B. Merge multiple audio files into a single audiobook with high-quality AAC encoding.</p>
         </div>
-        <div class="feature-card screenshot-card">
-            <img src="{{ site.baseurl }}/screenshots/screenshot1.png" alt="M4Bot - Main Interface" loading="lazy">
-        </div>
         <div class="feature-card">
             <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M4 6h16M4 12h16M4 18h16"/>
             </svg>
             <h3>Automatic Chapters</h3>
             <p>Chapters are automatically created from your audio files. Edit chapter titles, reorder files, and customize metadata before conversion.</p>
-        </div>
-        <div class="feature-card screenshot-card">
-            <img src="{{ site.baseurl }}/screenshots/screenshot2.png" alt="M4Bot - Chapters Management" loading="lazy">
         </div>
         <div class="feature-card">
             <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -252,9 +246,6 @@ description: Convert MP3, WAV, and M4A files to M4B format with chapters and met
             <h3>Audio Quality Control</h3>
             <p>Customize bitrate (64-320 kbps), sample rate (44.1/48 kHz), and channel layout (mono/stereo) to match your preferences.</p>
         </div>
-        <div class="feature-card screenshot-card">
-            <img src="{{ site.baseurl }}/screenshots/screenshot3.png" alt="M4Bot - Metadata Settings" loading="lazy">
-        </div>
         <div class="feature-card">
             <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
@@ -263,9 +254,6 @@ description: Convert MP3, WAV, and M4A files to M4B format with chapters and met
             </svg>
             <h3>100% Local Processing</h3>
             <p>All conversion happens on your Mac. Your files never leave your computer. No cloud uploads, no data collection, complete privacy.</p>
-        </div>
-        <div class="feature-card screenshot-card">
-            <img src="{{ site.baseurl }}/screenshots/screenshot4.png" alt="M4Bot - Drag & Drop" loading="lazy">
         </div>
         <div class="feature-card">
             <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -283,6 +271,18 @@ description: Convert MP3, WAV, and M4A files to M4B format with chapters and met
             </svg>
             <h3>Apple Silicon Optimized</h3>
             <p>M4Bot is designed exclusively for Macs with Apple Silicon processors, ensuring high-speed conversion and optimal performance for all your audiobook processing needs.</p>
+        </div>
+        <div class="feature-card screenshot-card">
+            <img src="{{ site.baseurl }}/screenshots/screenshot1.png" alt="M4Bot - Main Interface" loading="lazy">
+        </div>
+        <div class="feature-card screenshot-card">
+            <img src="{{ site.baseurl }}/screenshots/screenshot2.png" alt="M4Bot - Chapters Management" loading="lazy">
+        </div>
+        <div class="feature-card screenshot-card">
+            <img src="{{ site.baseurl }}/screenshots/screenshot3.png" alt="M4Bot - Metadata Settings" loading="lazy">
+        </div>
+        <div class="feature-card screenshot-card">
+            <img src="{{ site.baseurl }}/screenshots/screenshot4.png" alt="M4Bot - Drag & Drop" loading="lazy">
         </div>
     </div>
 </section>
